syntax = "proto3";

option java_package = "io.grpc.examples";
option objc_class_prefix = "HLW";
option go_package = "purchases";
option csharp_namespace = "Google.Protobuf.purchases";

package purchases;

enum Status {
    Ok = 0;
    Failed = 1;
}

message PuchaseItem {
  int64  FkProductId = 1;
  float  FullPrice = 2;
  float  Count = 3;
}

message Purchase {
  int64  Id = 1;
  int64  FkCurrency = 2;
  string DateTime = 3;
  repeated PuchaseItem Purchases = 4;
}

message PurchasesResponse {
  repeated Purchase Purchases = 1;
}

message ResultResponse {
  Status Status = 1;
}

message GetAllRequest {

}

service PurchaseService {
  rpc Add    (Purchase) returns (ResultResponse) {}
  rpc Update (Purchase) returns (ResultResponse) {}
  rpc Delete (Purchase) returns (ResultResponse) {}
  rpc GetAll (GetAllRequest)  returns (PurchasesResponse) {}
}